# robot-md-example-actuator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: hooks.json
claude-plugin/skills/using-robot-md-example-actuator/: SKILL.md
src/robot_md_example_actuator/: actuator.py
src/robot_md_example_actuator/skills/: using-robot-md-example-actuator.SKILL.md
tests/: test_actuator.py
